Fix too short link area in page logo section.

--- a/app/assets/stylesheets/blocks/page_header.scss
+++ b/app/assets/stylesheets/blocks/page_header.scss
@@ -17,6 +17,13 @@
         top: 0px;
         z-index: 10;
 
+        a {
+            display: block;
+            height: 100%;
+            width: 100%;
+            background: #004CFF;
+        }
+
         img {
             width: 174px;
         }
